[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fabric-helpers"
version = "0.1.0"
description = "Fabric helpers"

license = "MIT"

authors = [
    "Tony Narlock <tony@git-pull.com>"
]

readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.7"
fabtools = {git = "ssh://git@github.com/develtech/fabtools.git"}
fabric3 = "^1.14.post1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
